--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
+    "minidenticons": "^4.2.1",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
