--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tabler/icons-react": "^3.17.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "lucide-react": "^0.441.0",
     "minidenticons": "^4.2.1",
     "next": "14.2.11",
