--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "lucide-react": "^0.441.0",
+    "millify": "^6.1.0",
     "minidenticons": "^4.2.1",
     "next": "14.2.11",
     "pino-pretty": "^11.2.2",
