--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.3",
     "@tabler/icons-react": "^3.17.0",
+    "@web3auth/auth-adapter": "^9.0.2",
+    "@web3auth/base": "^9.0.2",
+    "@web3auth/no-modal": "^9.1.0",
+    "@web3auth/solana-provider": "^9.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
