--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "millify": "^6.1.0",
     "minidenticons": "^4.2.1",
     "next": "14.2.11",
+    "next-themes": "^0.3.0",
     "pino-pretty": "^11.2.2",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
