--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.3",
     "@tabler/icons-react": "^3.17.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@web3auth/auth-adapter": "^9.0.2",
     "@web3auth/base": "^9.0.2",
     "@web3auth/no-modal": "^9.1.0",
