--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
+    "react-number-format": "^5.4.4",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.2",
